<resources>
    <string name="app_name">Network Calculator</string>
    <string name="subnet_mask">Subnet Mask</string>
    <string name="cidr">CIDR</string>
    <string name="ip_address">IP Address</string>
    <string name="set">set</string>
    <string name="reset">reset</string>
    <string-array name="cidr_array">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
        <item>24</item>
        <item>25</item>
        <item>26</item>
        <item>27</item>
        <item>28</item>
        <item>29</item>
        <item>30</item>
        <item>31</item>
        <item>32</item>
    </string-array>
    <string-array name="subnet_mask_array">
        <item>255.0.0.0</item>
        <item>255.128.0.0</item>
        <item>255.192.0.0</item>
        <item>255.224.0.0</item>
        <item>255.240.0.0</item>
        <item>255.248.0.0</item>
        <item>255.252.0.0</item>
        <item>255.254.0.0</item>
        <item>255.255.0.0</item>
        <item>255.255.128.0</item>
        <item>255.255.192.0</item>
        <item>255.255.224.0</item>
        <item>255.255.248.0</item>
        <item>255.255.252.0</item>
        <item>255.255.254.0</item>
        <item>255.255.255.0</item>
        <item>255.255.255.128</item>
        <item>255.255.255.192</item>
        <item>255.255.255.224</item>
        <item>255.255.255.248</item>
        <item>255.255.255.252</item>
        <item>255.255.255.254</item>
        <item>255.255.255.255</item>
    </string-array>

</resources>