<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Hello World!"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <EditText
        android:id="@+id/ipv4"
        android:layout_width="229dp"
        android:layout_height="42dp"
        android:ems="10"
        android:inputType="textShortMessage"
        android:hint="@string/ip_address"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="32dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="32dp"
        tools:layout_editor_absoluteY="42dp"
        />

    <AutoCompleteTextView
        android:id="@+id/autoComplete_cidr"
        android:completionThreshold="1"
        android:layout_width="97dp"
        android:layout_height="39dp"
        android:inputType="textShortMessage"
        android:hint="@string/cidr"
        app:layout_constraintStart_toEndOf="@+id/ipv4"
        android:layout_marginStart="32dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="32dp"
    />

    <AutoCompleteTextView
        android:id="@+id/autoComplete_subnet_mask"
        android:layout_width="229dp"
        android:layout_height="42dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:inputType="textShortMessage"
        android:hint="@string/subnet_mask"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ipv4"
        />

    <Button
        android:id="@+id/button_set"
        android:layout_width="91dp"
        android:layout_height="50dp"
        android:layout_marginTop="16dp"
        android:text="@string/set"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.318"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/autoComplete_subnet_mask" />

    <Button
        android:id="@+id/button_reset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reset"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.523"
        app:layout_constraintStart_toEndOf="@+id/button_set"
        tools:layout_editor_absoluteY="166dp" />


</androidx.constraintlayout.widget.ConstraintLayout>